Fix z-index frecce->mask svg

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -20,7 +20,7 @@ background-color: #0095D5;
 
 .navbar-brand{
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 	background-color: #0095D5;
 }
 .navbar-brand svg{
@@ -107,7 +107,7 @@ a.nav-link {
     height: 100vh;
     -webkit-transition: height 0.5s cubic-bezier(0.7, 0, 0.3, 1);
     transition: height 0.5s cubic-bezier(0.7, 0, 0.3, 1);
-    z-index: 1;
+    z-index: 2;
     //visibility: hidden;
 }
 
